--- a/1.SimpleMVT/requirements.txt
+++ b/1.SimpleMVT/requirements.txt
@@ -1,4 +1,7 @@
-asgiref==3.9.2
+asgiref==3.9.1
 Django==5.2.6
+pillow==11.3.0
 sqlparse==0.5.3
+text-unidecode==1.3
 tzdata==2025.2
+Unidecode==1.4.0
