--- a/2,DjangoAPI/my-app/.env.development
+++ b/2,DjangoAPI/my-app/.env.development
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL=http://localhost:4099
 VITE_RECAPTCHA_KEY=6LdjneYrAAAAACbAyg3u8Y7_k43anxt761KzM9mm
+VITE_GOOGLE_AUTH=287206646911-6te9g0u73dnlu1a6af3qpu6uek9be4u8.apps.googleusercontent.com
