--- a/WebAPIDB/WebAPIDB/appsettings.json
+++ b/WebAPIDB/WebAPIDB/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-purple-hall-agcsp7p5-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_VrU6CdWOmN9f;"
+  }
 }
